--- a/styles.css
+++ b/styles.css
@@ -236,7 +236,7 @@ padding-left: 40px;
     }
   
     .sidebar {
-      width: 25%;
+      width: 28%;
       margin-top: 10px;
 
     }
@@ -264,8 +264,7 @@ padding-left: 40px;
     }
 
     nav a {
-      border-left: darkgrey 0px solid;
-      border-right: darkgrey 0px solid;
+      font-size: small;
     }
     .card-image {
       width: 180px;
@@ -274,6 +273,22 @@ padding-left: 40px;
 
     #turnOrder {
       width: 35%;
+    }
+
+    p {
+      font-size: small;
+    }
+
+    main li {
+      font-size: small;
+    }
+
+    #mcmmoimage {
+      width: 60%;
+    }
+
+    #magicHeader {
+      width: 90%;
     }
   }
   
